<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_support_agent_24"
        android:layout_margin="8dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/agent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akosua_agyapong"
                android:fontFamily="@font/alegreya"
                android:textSize="18sp"
                android:textColor="#000000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/agent_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agent_gmail_com"
                    android:fontFamily="@font/alegreya"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/agent_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_49_30"
                    android:fontFamily="@font/alegreya"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp" />

            </LinearLayout>
            <TextView
                android:id="@+id/agent_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:fontFamily="@font/alegreya"
                android:textAllCaps="true"
                android:textColor="@color/teal_700" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

