<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administrator"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/alegreya"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_john_gmail_com"
            android:padding="8dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="8dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp"
            android:layout_marginEnd="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminSignInPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/adminSignInBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="32dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/alegreya"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textSize="20sp"
        />

</LinearLayout>