<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/administrator"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="64dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/firstname"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/admin_sign_up_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastname"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_sign_up_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="64dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/othername"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_sign_up_othername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="64dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:padding="8dp"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_sign_up_pswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/admin_sign_up_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="32dp"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/alegreya"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:textSize="20sp"
            />

    </LinearLayout>
</ScrollView>